--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,187 +1,78 @@
 <h2>Reporter output</h2><table><tr><td>Launching Chrome</td></tr>
 <tr><td>Browser Maximised</td></tr>
-<tr><td>Angular Request Completed in 54ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: username] displayed in 70ms</td></tr>
+<tr><td>Angular Request Completed in 63ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: username] displayed in 102ms</td></tr>
 <tr><td>Login Page title Verified</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: username] displayed in 20ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: password] displayed in 34ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: kc-login] displayed in 62ms</td></tr>
-<tr><td>Angular Request Completed in 20ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: username] displayed in 18ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: password] displayed in 37ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: kc-login] displayed in 37ms</td></tr>
+<tr><td>Angular Request Completed in 386ms</td></tr>
 <tr><td>User signed Admin</td></tr>
-<tr><td>Enter Text for Search =500001</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Input] displayed in 49ms</td></tr>
-<tr><td>Angular request time 839ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Option_1_Address_Line] displayed in 49ms</td></tr>
+<tr><td>Element '//input[@id='SRCH_Input']' is displayed in 74ms</td></tr>
+<tr><td>Element 'toolbar-saved' is displayed in 176ms</td></tr>
+<tr><td>Enter Text for Search =Alert</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: SRCH_Input] displayed in 50ms</td></tr>
+<tr><td>Angular request time 578ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: SRCH_Option_1_Address_Line] displayed in 55ms</td></tr>
 <tr><td>Click Customer</td></tr>
-<tr><td>Angular request time 457ms</td></tr>
+<tr><td>Angular request time 443ms</td></tr>
+<tr><td>Element '//div[@class='address-details']' is displayed in 134ms</td></tr>
+<tr><td>Angular request time 28ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: 'LOC_Location_Id'] displayed in 41ms</td></tr>
+<tr><td>Angular request time 9ms</td></tr>
+<tr><td>got Text CustomerLocId = AUTOLOC001</td></tr>
+<tr><td>Customer Location Id found AUTOLOC001</td></tr>
+<tr><td>Strings Matched: AUTOLOC001 = AUTOLOC001</td></tr>
+<tr><td>Element 'ALERTO_Action_Button' is displayed in 46ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: ALERTO_Action_Button] displayed in 47ms</td></tr>
 <tr><td>Angular request time 13ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: CUST_Customer_Id] displayed in 41ms</td></tr>
-<tr><td>Angular request time 7ms</td></tr>
-<tr><td>got Text Customer Id = 500001</td></tr>
-<tr><td>CustomerId found 500001</td></tr>
-<tr><td>Strings Matched: 500001 = 500001</td></tr>
-<tr><td>Angular request time 9ms</td></tr>
-<tr><td>Click on Account Drop down</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Label] displayed in 45ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Label] displayed in 40ms</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
-<tr><td>Click Account Drop down</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
-<tr><td>Enter Account Name</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts] displayed in 53ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts] displayed in 36ms</td></tr>
-<tr><td>Angular request time 7ms</td></tr>
-<tr><td>Click Search Account</td></tr>
-<tr><td>Angular request time 7ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Result1_Customer_Status] displayed in 23ms</td></tr>
-<tr><td>Strings Matched: Current = Current</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Result2_Customer_Status] displayed in 20ms</td></tr>
-<tr><td>Strings Matched: Former = Former</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Result3_Customer_Status] displayed in 20ms</td></tr>
-<tr><td>Strings Matched: Former = Former</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Result1_Address_Line] displayed in 26ms</td></tr>
-<tr><td>Strings Matched: 8 Orchard = 8 Orchard</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Result2_Address_Line] displayed in 23ms</td></tr>
-<tr><td>Strings Matched: 8 Orchard = 8 Orchard</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Result3_Address_Line] displayed in 24ms</td></tr>
-<tr><td>Strings Matched: 8 Orchard = 8 Orchard</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Result1_Address_City_State_ZipCode] displayed in 25ms</td></tr>
-<tr><td>Strings Matched: Troy NY 12180 = Troy NY 12180</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Result2_Address_City_State_ZipCode] displayed in 25ms</td></tr>
-<tr><td>Strings Matched: Troy NY 12180 = Troy NY 12180</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Result3_Address_City_State_ZipCode] displayed in 28ms</td></tr>
-<tr><td>Strings Matched: Troy NY 12180 = Troy NY 12180</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Result2_Move_In_Date] displayed in 25ms</td></tr>
-<tr><td>Strings Matched: Aug 08, 2019 = Aug 08, 2019</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Result2_Move_In_Date] displayed in 18ms</td></tr>
-<tr><td>Strings Matched: Aug 08, 2019 = Aug 08, 2019</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Result2_Address_Line] displayed in 16ms</td></tr>
-<tr><td>Angular request time 56ms</td></tr>
-<tr><td>Verifying Address Details</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_Line'] displayed in 55ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_Line'] displayed in 33ms</td></tr>
-<tr><td>Angular request time 12ms</td></tr>
-<tr><td>got Text Address Line Result = 8 Orchard</td></tr>
-<tr><td>Strings Matched: 8 Orchard = 8 Orchard</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_City'] displayed in 74ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_City'] displayed in 44ms</td></tr>
-<tr><td>Angular request time 11ms</td></tr>
-<tr><td>got Text Address City Result = Troy</td></tr>
-<tr><td>Strings Matched: Troy = Troy</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_State'] displayed in 42ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_State'] displayed in 32ms</td></tr>
-<tr><td>Angular request time 6ms</td></tr>
-<tr><td>got Text Address State Result = NY</td></tr>
-<tr><td>Strings Matched: NY = NY</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_ZipCode'] displayed in 39ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_ZipCode'] displayed in 30ms</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
-<tr><td>got Text Address State Result = 12180</td></tr>
-<tr><td>Strings Matched: 12180 = 12180</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
-<tr><td>Click on Account Drop down</td></tr>
-<tr><td>Enter Account Name</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts] displayed in 43ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts] displayed in 33ms</td></tr>
+<tr><td>Click Alert OK</td></tr>
+<tr><td>Angular request time 19ms</td></tr>
+<tr><td>Alert on Load Clicked</td></tr>
+<tr><td>Click Alert Description</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: ALERT_1_Description] displayed in 102ms</td></tr>
+<tr><td>Angular request time 32ms</td></tr>
+<tr><td>Click Alert Description</td></tr>
 <tr><td>Angular request time 22ms</td></tr>
-<tr><td>Click Search Account</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts] displayed in 40ms</td></tr>
-<tr><td>Setting Text on Account Search Text with Text = TESTLOCATION05</td></tr>
-<tr><td>Angular request time 6ms</td></tr>
-<tr><td>Angular request time 111ms</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
-<tr><td>Verify Account Name =TESTLOCATION05</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Result1] displayed in 41ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Accounts_Result1] displayed in 34ms</td></tr>
-<tr><td>Angular request time 7ms</td></tr>
-<tr><td>got Text Account Search Result = 8 Orchard
-Troy NY 12180
-TESTLOCATION05
-$0.00
-Aug 08, 2019 - Aug 08, 2019
-Former</td></tr>
-<tr><td>String Verified  =8 Orchard
-Troy NY 12180
-TESTLOCATION05
-$0.00
-Aug 08, 2019 - Aug 08, 2019
-Former Contains = TESTLOCATION05</td></tr>
-<tr><td>Angular request time 7ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Input] displayed in 28ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Input] displayed in 20ms</td></tr>
-<tr><td>Setting Text on Search Text with Text = CUS@0004</td></tr>
-<tr><td>Angular request time 6ms</td></tr>
-<tr><td>Search Text</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: SRCH_Option_1_Customer_Name] displayed in 1325ms</td></tr>
-<tr><td>Click DashBoard Search Result </td></tr>
-<tr><td>Angular request time 362ms</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
-<tr><td>Verifying Address Details</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_Line'] displayed in 42ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_Line'] displayed in 35ms</td></tr>
-<tr><td>Angular request time 5ms</td></tr>
-<tr><td>got Text Address Line Result = Test</td></tr>
-<tr><td>Strings Matched: Test = Test</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_City'] displayed in 37ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_City'] displayed in 38ms</td></tr>
-<tr><td>Angular request time 9ms</td></tr>
-<tr><td>got Text Address City Result = Ny</td></tr>
-<tr><td>Strings Matched: Ny = Ny</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_State'] displayed in 39ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_State'] displayed in 33ms</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
-<tr><td>got Text Address State Result = SD</td></tr>
-<tr><td>Strings Matched: SD = SD</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_ZipCode'] displayed in 39ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_ZipCode'] displayed in 36ms</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
-<tr><td>got Text Address State Result = 89218-3</td></tr>
-<tr><td>Strings Matched: 89218-3 = 89218-3</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: ACTION_Refresh_Page] displayed in 40ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: ACTION_Refresh_Page] displayed in 298ms</td></tr>
-<tr><td>Angular request time 303ms</td></tr>
-<tr><td>Click Refresh Button</td></tr>
-<tr><td>Angular request time 14ms</td></tr>
-<tr><td>Refresh Page</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
-<tr><td>Verifying Address Details</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_Line'] displayed in 38ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_Line'] displayed in 42ms</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
-<tr><td>got Text Address Line Result = Test</td></tr>
-<tr><td>Strings Matched: Test = Test</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_City'] displayed in 392ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_City'] displayed in 33ms</td></tr>
-<tr><td>Angular request time 6ms</td></tr>
-<tr><td>got Text Address City Result = Ny</td></tr>
-<tr><td>Strings Matched: Ny = Ny</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_State'] displayed in 37ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_State'] displayed in 57ms</td></tr>
+<tr><td>Click Description</td></tr>
+<tr><td>Element 'ALERTO_Action_Button' is displayed in 372ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: ALERTO_Action_Button] displayed in 50ms</td></tr>
 <tr><td>Angular request time 15ms</td></tr>
-<tr><td>got Text Address State Result = SD</td></tr>
-<tr><td>Strings Matched: SD = SD</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_ZipCode'] displayed in 37ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: 'LOC_Address_ZipCode'] displayed in 35ms</td></tr>
+<tr><td>Click Alert OK</td></tr>
+<tr><td>Angular request time 18ms</td></tr>
+<tr><td>Alert on description Clicked</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: ACTION_Refresh_Page] displayed in 134ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: ACTION_Refresh_Page] displayed in 69ms</td></tr>
+<tr><td>Angular request time 328ms</td></tr>
+<tr><td>Click Refresh Button</td></tr>
+<tr><td>Angular request time 7ms</td></tr>
+<tr><td>Refresh Page</td></tr>
+<tr><td>Page refreshed verify no alets loaded</td></tr>
+<tr><td>Alert not visible</td></tr>
+<tr><td>Clicking Transaction Link</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> css selector: #mat-tab-label-0-1 > div:nth-child(1)] displayed in 547ms</td></tr>
+<tr><td>Angular request time 1308ms</td></tr>
+<tr><td>Click Transaction Link</td></tr>
+<tr><td>Angular request time 511ms</td></tr>
+<tr><td>Clicking Summary Link</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> css selector: #mat-tab-label-0-0 > div:nth-child(1)] displayed in 33ms</td></tr>
+<tr><td>Angular request time 45ms</td></tr>
+<tr><td>Click Summary Link</td></tr>
+<tr><td>Angular request time 12ms</td></tr>
+<tr><td>Alert not visible</td></tr>
 <tr><td>Angular request time 11ms</td></tr>
-<tr><td>got Text Address State Result = 89218-3</td></tr>
-<tr><td>Strings Matched: 89218-3 = 89218-3</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> xpath: //div[contains(text(),'No Other Accounts')]] displayed in 22ms</td></tr>
-<tr><td>Angular request time 514ms</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: USR_Name] displayed in 42ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: USR_Name] displayed in 40ms</td></tr>
-<tr><td>Angular request time 11ms</td></tr>
-<tr><td>Click Logged User Link</td></tr>
+<tr><td>Angular request time 7ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: USR_Name] displayed in 51ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: USR_Name] displayed in 33ms</td></tr>
 <tr><td>Angular request time 10ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: ACTION_Logout] displayed in 57ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (71f43a459bc12695eb43e21e5e395218)] -> id: ACTION_Logout] displayed in 34ms</td></tr>
-<tr><td>Angular request time 108ms</td></tr>
+<tr><td>Click Logged User Link</td></tr>
+<tr><td>Angular request time 9ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: ACTION_Logout] displayed in 47ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: ACTION_Logout] displayed in 31ms</td></tr>
+<tr><td>Angular request time 30ms</td></tr>
 <tr><td>Click logout Link</td></tr>
-<tr><td>Angular request time 11ms</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
+<tr><td>Angular request time 14ms</td></tr>
+<tr><td>Angular request time 13ms</td></tr>
 <tr><td>Closing Browser</td></tr>
 <tr><td>Test Completed...</td></tr>
 </table>
