--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7161c7">  <td>19/10/24 08:31:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0009_1_VerifyAccountSearchRefresh@413d1baf]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896305732</td>   <td></td> </tr>
-<tr bgcolor="77a679">  <td>19/10/24 08:31:04</td>   <td>-22120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0009_1_VerifyAccountSearchRefresh.TestSearchAccount()[pri:1, instance:com.NexusPortalAutomation.TestCases.Java.TC0009_1_VerifyAccountSearchRefresh@413d1baf]">TestSearchAccount</td> 
-  <td>main@1896305732</td>   <td></td> </tr>
-<tr bgcolor="7161c7">  <td>19/10/24 08:30:59</td>   <td>-26975</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.readProp(org.testng.ITestContext)[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0009_1_VerifyAccountSearchRefresh@413d1baf]">&gt;&gt;readProp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896305732</td>   <td></td> </tr>
+<tr bgcolor="7161c7">  <td>19/10/24 11:34:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0006_1_TestAlertOnLoadOnce@368f2016]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1069716895</td>   <td></td> </tr>
+<tr bgcolor="77a679">  <td>19/10/24 11:34:04</td>   <td>-38690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0006_1_TestAlertOnLoadOnce.TestSearchAlertOnLoad()[pri:2, instance:com.NexusPortalAutomation.TestCases.Java.TC0006_1_TestAlertOnLoadOnce@368f2016]">TestSearchAlertOnLoad</td> 
+  <td>main@1069716895</td>   <td></td> </tr>
+<tr bgcolor="7161c7">  <td>19/10/24 11:34:00</td>   <td>-42558</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.readProp(org.testng.ITestContext)[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0006_1_TestAlertOnLoadOnce@368f2016]">&gt;&gt;readProp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1069716895</td>   <td></td> </tr>
 </table>
