--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,78 +1,65 @@
-<h2>Reporter output</h2><table><tr><td>Launching Chrome</td></tr>
+<h2>Reporter output</h2><table><tr><td>Value for Key 'stLocationID' found from sheet =SEWER001</td></tr>
+<tr><td>Value for Key 'stDateValue' found from sheet =Aug 31, 1998</td></tr>
+<tr><td>Value for Key 'stDateValue2' found from sheet =Jun 30, 1998</td></tr>
+<tr><td>Value for Key 'stDateValue3' found from sheet =Apr 30, 1998</td></tr>
+<tr><td>Value for Key 'stDateValue4' found from sheet =Feb 28, 1998</td></tr>
+<tr><td>Launching Chrome</td></tr>
 <tr><td>Browser Maximised</td></tr>
-<tr><td>Angular Request Completed in 63ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: username] displayed in 102ms</td></tr>
+<tr><td>Angular Request Completed in 50ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: username] displayed in 89ms</td></tr>
 <tr><td>Login Page title Verified</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: username] displayed in 18ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: password] displayed in 37ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: kc-login] displayed in 37ms</td></tr>
-<tr><td>Angular Request Completed in 386ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: username] displayed in 20ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: password] displayed in 36ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: kc-login] displayed in 554ms</td></tr>
+<tr><td>Angular Request Completed in 20ms</td></tr>
 <tr><td>User signed Admin</td></tr>
-<tr><td>Element '//input[@id='SRCH_Input']' is displayed in 74ms</td></tr>
-<tr><td>Element 'toolbar-saved' is displayed in 176ms</td></tr>
-<tr><td>Enter Text for Search =Alert</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: SRCH_Input] displayed in 50ms</td></tr>
-<tr><td>Angular request time 578ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: SRCH_Option_1_Address_Line] displayed in 55ms</td></tr>
+<tr><td>Enter Text for Search =SEWER001</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: SRCH_Input] displayed in 58ms</td></tr>
+<tr><td>Angular request time 647ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: SRCH_Option_1_Address_Line] displayed in 66ms</td></tr>
 <tr><td>Click Customer</td></tr>
-<tr><td>Angular request time 443ms</td></tr>
-<tr><td>Element '//div[@class='address-details']' is displayed in 134ms</td></tr>
-<tr><td>Angular request time 28ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: 'LOC_Location_Id'] displayed in 41ms</td></tr>
+<tr><td>Angular request time 954ms</td></tr>
 <tr><td>Angular request time 9ms</td></tr>
-<tr><td>got Text CustomerLocId = AUTOLOC001</td></tr>
-<tr><td>Customer Location Id found AUTOLOC001</td></tr>
-<tr><td>Strings Matched: AUTOLOC001 = AUTOLOC001</td></tr>
-<tr><td>Element 'ALERTO_Action_Button' is displayed in 46ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: ALERTO_Action_Button] displayed in 47ms</td></tr>
-<tr><td>Angular request time 13ms</td></tr>
-<tr><td>Click Alert OK</td></tr>
-<tr><td>Angular request time 19ms</td></tr>
-<tr><td>Alert on Load Clicked</td></tr>
-<tr><td>Click Alert Description</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: ALERT_1_Description] displayed in 102ms</td></tr>
-<tr><td>Angular request time 32ms</td></tr>
-<tr><td>Click Alert Description</td></tr>
-<tr><td>Angular request time 22ms</td></tr>
-<tr><td>Click Description</td></tr>
-<tr><td>Element 'ALERTO_Action_Button' is displayed in 372ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: ALERTO_Action_Button] displayed in 50ms</td></tr>
-<tr><td>Angular request time 15ms</td></tr>
-<tr><td>Click Alert OK</td></tr>
-<tr><td>Angular request time 18ms</td></tr>
-<tr><td>Alert on description Clicked</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: ACTION_Refresh_Page] displayed in 134ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: ACTION_Refresh_Page] displayed in 69ms</td></tr>
-<tr><td>Angular request time 328ms</td></tr>
-<tr><td>Click Refresh Button</td></tr>
-<tr><td>Angular request time 7ms</td></tr>
-<tr><td>Refresh Page</td></tr>
-<tr><td>Page refreshed verify no alets loaded</td></tr>
-<tr><td>Alert not visible</td></tr>
-<tr><td>Clicking Transaction Link</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> css selector: #mat-tab-label-0-1 > div:nth-child(1)] displayed in 547ms</td></tr>
-<tr><td>Angular request time 1308ms</td></tr>
-<tr><td>Click Transaction Link</td></tr>
-<tr><td>Angular request time 511ms</td></tr>
-<tr><td>Clicking Summary Link</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> css selector: #mat-tab-label-0-0 > div:nth-child(1)] displayed in 33ms</td></tr>
-<tr><td>Angular request time 45ms</td></tr>
-<tr><td>Click Summary Link</td></tr>
-<tr><td>Angular request time 12ms</td></tr>
-<tr><td>Alert not visible</td></tr>
-<tr><td>Angular request time 11ms</td></tr>
-<tr><td>Angular request time 7ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: USR_Name] displayed in 51ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: USR_Name] displayed in 33ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: 'LOC_Location_Id'] displayed in 38ms</td></tr>
+<tr><td>Angular request time 9ms</td></tr>
+<tr><td>got Text CustomerLocId = SEWER001</td></tr>
+<tr><td>Customer Location Id found SEWER001</td></tr>
+<tr><td>Strings Matched: SEWER001 = SEWER001</td></tr>
+<tr><td>Click Bill Statement Button</td></tr>
+<tr><td>Angular request time 8ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: BILL_Statement_Button] displayed in 541ms</td></tr>
 <tr><td>Angular request time 10ms</td></tr>
-<tr><td>Click Logged User Link</td></tr>
+<tr><td>Click Bill Statement Button</td></tr>
+<tr><td>Angular request time 25ms</td></tr>
+<tr><td>Verify Bill Statement Date</td></tr>
+<tr><td>Angular request time 12ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: BILL_Statement_1] displayed in 49ms</td></tr>
+<tr><td>Strings Matched: Aug 31, 1998 = Aug 31, 1998</td></tr>
+<tr><td>Verify Bill Statement Date</td></tr>
+<tr><td>Angular request time 13ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: BILL_Statement_2] displayed in 53ms</td></tr>
+<tr><td>Strings Matched: Jun 30, 1998 = Jun 30, 1998</td></tr>
+<tr><td>Verify Bill Statement Date</td></tr>
+<tr><td>Angular request time 8ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: BILL_Statement_3] displayed in 61ms</td></tr>
+<tr><td>Strings Matched: Apr 30, 1998 = Apr 30, 1998</td></tr>
+<tr><td>Verify Bill Statement Date</td></tr>
 <tr><td>Angular request time 9ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: ACTION_Logout] displayed in 47ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (ce065f9934738361b1c133a10acbe8de)] -> id: ACTION_Logout] displayed in 31ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: BILL_Statement_4] displayed in 575ms</td></tr>
+<tr><td>Strings Matched: Feb 28, 1998 = Feb 28, 1998</td></tr>
+<tr><td>Angular request time 247ms</td></tr>
+<tr><td>Angular request time 15ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: USR_Name] displayed in 553ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: USR_Name] displayed in 286ms</td></tr>
+<tr><td>Angular request time 43ms</td></tr>
+<tr><td>Click Logged User Link</td></tr>
+<tr><td>Angular request time 32ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: ACTION_Logout] displayed in 47ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: ACTION_Logout] displayed in 41ms</td></tr>
 <tr><td>Angular request time 30ms</td></tr>
 <tr><td>Click logout Link</td></tr>
-<tr><td>Angular request time 14ms</td></tr>
-<tr><td>Angular request time 13ms</td></tr>
+<tr><td>Angular request time 16ms</td></tr>
+<tr><td>Angular request time 16ms</td></tr>
 <tr><td>Closing Browser</td></tr>
 <tr><td>Test Completed...</td></tr>
 </table>
