new test cases added

--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,65 +1,108 @@
-<h2>Reporter output</h2><table><tr><td>Value for Key 'stLocationID' found from sheet =SEWER001</td></tr>
-<tr><td>Value for Key 'stDateValue' found from sheet =Aug 31, 1998</td></tr>
-<tr><td>Value for Key 'stDateValue2' found from sheet =Jun 30, 1998</td></tr>
-<tr><td>Value for Key 'stDateValue3' found from sheet =Apr 30, 1998</td></tr>
-<tr><td>Value for Key 'stDateValue4' found from sheet =Feb 28, 1998</td></tr>
+<h2>Reporter output</h2><table><tr><td>Value for Key 'locationID' found from sheet =LOC@0004</td></tr>
+<tr><td>Value for Key 'defaultCustomer' found from sheet =Mr. VACANT VACANT</td></tr>
+<tr><td>Value for Key 'moveInCustomer' found from sheet =Mr. Vacant Vacant</td></tr>
 <tr><td>Launching Chrome</td></tr>
 <tr><td>Browser Maximised</td></tr>
-<tr><td>Angular Request Completed in 50ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: username] displayed in 89ms</td></tr>
+<tr><td>Deleting Records for ServiceOrder = SORD00000003764</td></tr>
+<tr><td>Deleting Records for Location =  LOC@0004</td></tr>
+<tr><td>Angular Request Completed in 37ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: username] displayed in 68ms</td></tr>
 <tr><td>Login Page title Verified</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: username] displayed in 20ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: password] displayed in 36ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: kc-login] displayed in 554ms</td></tr>
-<tr><td>Angular Request Completed in 20ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: username] displayed in 17ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: password] displayed in 35ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: kc-login] displayed in 49ms</td></tr>
+<tr><td>Angular Request Completed in 27ms</td></tr>
 <tr><td>User signed Admin</td></tr>
-<tr><td>Enter Text for Search =SEWER001</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: SRCH_Input] displayed in 58ms</td></tr>
-<tr><td>Angular request time 647ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: SRCH_Option_1_Address_Line] displayed in 66ms</td></tr>
+<tr><td>Enter Text for Search =LOC@0004</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: SRCH_Input] displayed in 57ms</td></tr>
+<tr><td>Angular request time 1111ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: SRCH_Option_1_Address_Line] displayed in 40ms</td></tr>
 <tr><td>Click Customer</td></tr>
-<tr><td>Angular request time 954ms</td></tr>
-<tr><td>Angular request time 9ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: 'LOC_Location_Id'] displayed in 38ms</td></tr>
-<tr><td>Angular request time 9ms</td></tr>
-<tr><td>got Text CustomerLocId = SEWER001</td></tr>
-<tr><td>Customer Location Id found SEWER001</td></tr>
-<tr><td>Strings Matched: SEWER001 = SEWER001</td></tr>
-<tr><td>Click Bill Statement Button</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: BILL_Statement_Button] displayed in 541ms</td></tr>
-<tr><td>Angular request time 10ms</td></tr>
-<tr><td>Click Bill Statement Button</td></tr>
-<tr><td>Angular request time 25ms</td></tr>
-<tr><td>Verify Bill Statement Date</td></tr>
-<tr><td>Angular request time 12ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: BILL_Statement_1] displayed in 49ms</td></tr>
-<tr><td>Strings Matched: Aug 31, 1998 = Aug 31, 1998</td></tr>
-<tr><td>Verify Bill Statement Date</td></tr>
+<tr><td>Angular request time 305ms</td></tr>
 <tr><td>Angular request time 13ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: BILL_Statement_2] displayed in 53ms</td></tr>
-<tr><td>Strings Matched: Jun 30, 1998 = Jun 30, 1998</td></tr>
-<tr><td>Verify Bill Statement Date</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: 'LOC_Location_Id'] displayed in 36ms</td></tr>
+<tr><td>Angular request time 7ms</td></tr>
+<tr><td>got Text CustomerLocId = LOC@0004</td></tr>
+<tr><td>Customer Location Id found LOC@0004</td></tr>
+<tr><td>Strings Matched: LOC@0004 = LOC@0004</td></tr>
+<tr><td>Click Action Dropdown</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: ACTION_Button] displayed in 36ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: ACTION_Button] displayed in 19ms</td></tr>
+<tr><td>Angular request time 18ms</td></tr>
+<tr><td>Click Action Drop down</td></tr>
+<tr><td>Angular request time 11ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: ACTION_Transfer_Service] displayed in 55ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: ACTION_Transfer_Service] displayed in 47ms</td></tr>
+<tr><td>Angular request time 59ms</td></tr>
+<tr><td>Click Action Transfer Service Drop down</td></tr>
+<tr><td>Angular request time 20ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: XFER_Select] displayed in 82ms</td></tr>
 <tr><td>Angular request time 8ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: BILL_Statement_3] displayed in 61ms</td></tr>
-<tr><td>Strings Matched: Apr 30, 1998 = Apr 30, 1998</td></tr>
-<tr><td>Verify Bill Statement Date</td></tr>
+<tr><td>Click Transfer Combo</td></tr>
+<tr><td>Angular request time 8ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: XFER_Select_Option_2] displayed in 198ms</td></tr>
+<tr><td>Angular request time 14ms</td></tr>
+<tr><td>Click Transfer Option 2</td></tr>
+<tr><td>Angular request time 7ms</td></tr>
+<tr><td>TRANSFER</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: CLO_Service_Order_Input] displayed in 54ms</td></tr>
+<tr><td>Setting Text on Search Request with Text = TRANSFER</td></tr>
+<tr><td>Angular request time 13ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: XFER_Date_Picker_Requested] displayed in 59ms</td></tr>
+<tr><td>Entered Request Date = 10/27/2019 11:39</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: XFER_Date_Picker_Scheduled] displayed in 63ms</td></tr>
+<tr><td>Enter Schedule Date Date</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: XFER_Date_Picker_Scheduled] displayed in 37ms</td></tr>
+<tr><td>Setting Text on DatePicket with Text = 10/27/2019 11:39</td></tr>
+<tr><td>Angular request time 7ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: XFER_Date_Picker_Requested] displayed in 33ms</td></tr>
+<tr><td>Entered Request Date = 10/27/2019 11:39</td></tr>
+<tr><td>Submit Transfer Request</td></tr>
+<tr><td>TRANSFER</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: CLO_Service_Order_Input] displayed in 385ms</td></tr>
+<tr><td>Setting Text on Search Request with Text = TRANSFER</td></tr>
+<tr><td>Angular request time 12ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: XFER_Date_Picker_Scheduled] displayed in 34ms</td></tr>
+<tr><td>Enter Schedule Date Date</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: XFER_Date_Picker_Scheduled] displayed in 38ms</td></tr>
+<tr><td>Setting Text on DatePicket with Text = 10/27/2019 11:39</td></tr>
+<tr><td>Angular request time 522ms</td></tr>
+<tr><td>Strings Matched: Mr. VACANT VACANT = Mr. VACANT VACANT</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: XFER_Search_Input] displayed in 42ms</td></tr>
+<tr><td>Setting Text on Customer Name Request with Text = Mr. VACANT VACANT</td></tr>
 <tr><td>Angular request time 9ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: BILL_Statement_4] displayed in 575ms</td></tr>
-<tr><td>Strings Matched: Feb 28, 1998 = Feb 28, 1998</td></tr>
-<tr><td>Angular request time 247ms</td></tr>
-<tr><td>Angular request time 15ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: USR_Name] displayed in 553ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: USR_Name] displayed in 286ms</td></tr>
-<tr><td>Angular request time 43ms</td></tr>
-<tr><td>Click Logged User Link</td></tr>
-<tr><td>Angular request time 32ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: ACTION_Logout] displayed in 47ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (6f81aa7538f475c82ac702e0a893db25)] -> id: ACTION_Logout] displayed in 41ms</td></tr>
-<tr><td>Angular request time 30ms</td></tr>
-<tr><td>Click logout Link</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: XFER_Search_Option_1] displayed in 940ms</td></tr>
+<tr><td>Angular request time 19ms</td></tr>
+<tr><td>Click XFER_Search_Option_1_Customer_Name</td></tr>
+<tr><td>Angular request time 9ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: XFER_Description] displayed in 46ms</td></tr>
+<tr><td>Setting Text on Description Request with Text = Description for Start Service</td></tr>
+<tr><td>Angular request time 9ms</td></tr>
+<tr><td>Click Submit</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: XFER_Button_Action] displayed in 395ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: XFER_Button_Action] displayed in 36ms</td></tr>
+<tr><td>Angular request time 115ms</td></tr>
+<tr><td>Click MoveInSubmit Button</td></tr>
+<tr><td>Angular request time 8ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: XFER_Button_Done] displayed in 556ms</td></tr>
+<tr><td>Angular request time 34ms</td></tr>
+<tr><td>Click Done Button for Transfer</td></tr>
 <tr><td>Angular request time 16ms</td></tr>
-<tr><td>Angular request time 16ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: ACTION_Refresh_Page] displayed in 75ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: ACTION_Refresh_Page] displayed in 90ms</td></tr>
+<tr><td>Angular request time 523ms</td></tr>
+<tr><td>Click Refresh Button</td></tr>
+<tr><td>Angular request time 13ms</td></tr>
+<tr><td>Refresh Page</td></tr>
+<tr><td>Angular request time 13ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> xpath: //*[@id="SRCH_Customers_Button_Trigger"]/span/mat-icon] displayed in 45ms</td></tr>
+<tr><td>Angular request time 19ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: SRCH_Customers_Option_1_Customer_Name] displayed in 50ms</td></tr>
+<tr><td>Angular request time 7ms</td></tr>
+<tr><td>Strings Matched: Mr. Vacant Vacant = Mr. Vacant Vacant</td></tr>
+<tr><td>Angular request time 10ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (eb7f5e43552b41b557ef6b532027e903)] -> id: SRCH_Customers_Option_1_Customer_Name] displayed in 31ms</td></tr>
+<tr><td>Angular request time 7ms</td></tr>
 <tr><td>Closing Browser</td></tr>
 <tr><td>Test Completed...</td></tr>
 </table>
