--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.NexusPortalAutomation.TestCases.Java.TC0017_StatementsOrderByDate</td>
+<td>com.NexusPortalAutomation.TestCases.Java.TC0050_VerifyMoveiinCustomerAppearing</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TestBillingStatements</td>
+<td>VerifyTransferActionServiceOrder</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
