--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7161c7">  <td>19/10/27 04:13:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.readProp(org.testng.ITestContext)[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0017_StatementsOrderByDate@c0c2f8d]">&gt;&gt;readProp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@101775274</td>   <td></td> </tr>
-<tr bgcolor="77a679">  <td>19/10/27 04:13:18</td>   <td>3917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0017_StatementsOrderByDate.TestBillingStatements()[pri:1, instance:com.NexusPortalAutomation.TestCases.Java.TC0017_StatementsOrderByDate@c0c2f8d]">TestBillingStatements</td> 
-  <td>main@101775274</td>   <td></td> </tr>
-<tr bgcolor="7161c7">  <td>19/10/27 04:13:32</td>   <td>18466</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0017_StatementsOrderByDate@c0c2f8d]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@101775274</td>   <td></td> </tr>
+<tr bgcolor="7cd7a0">  <td>19/10/27 11:38:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.readProp(org.testng.ITestContext)[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0050_VerifyMoveiinCustomerAppearing@198b6731]">&gt;&gt;readProp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@961409111</td>   <td></td> </tr>
+<tr bgcolor="77a679">  <td>19/10/27 11:39:02</td>   <td>6673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0050_VerifyMoveiinCustomerAppearing.VerifyTransferActionServiceOrder()[pri:1, instance:com.NexusPortalAutomation.TestCases.Java.TC0050_VerifyMoveiinCustomerAppearing@198b6731]">VerifyTransferActionServiceOrder</td> 
+  <td>main@961409111</td>   <td></td> </tr>
+<tr bgcolor="7cd7a0">  <td>19/10/27 11:39:35</td>   <td>39633</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0050_VerifyMoveiinCustomerAppearing@198b6731]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@961409111</td>   <td></td> </tr>
 </table>
